# rds-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.en.md  README.md
.claude/skills/db-query/: SKILL.md  examples.md  reference.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh  uninstall.sh
src/: cache.rs  cli.rs  config.rs  crypto.rs  format.rs  lib.rs  main.rs  query_manager.rs  secret.rs  validator.rs
src/db/: mod.rs  mysql.rs  postgres.rs
