[package]
name = "rds-cli"
version = "0.1.0"
authors = ["junyeong-ai <ai.junyeong@gmail.com>"]
edition = "2024"
rust-version = "1.91.1"
description = "Universal Database Intelligence Layer for AI Agents - PostgreSQL/MySQL CLI with schema exploration, named queries, and multi-format output"
homepage = "https://github.com/junyeong-ai/rds-cli"
repository = "https://github.com/junyeong-ai/rds-cli"
license = "MIT OR Apache-2.0"
keywords = ["database", "cli", "rds", "postgresql", "mysql"]
categories = ["command-line-utilities", "database"]
readme = "README.md"

[[bin]]
name = "rds-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
tokio-postgres = "0.7.15"
postgres-types = { version = "0.2.9", features = ["derive", "with-chrono-0_4", "with-uuid-1"] }
mysql_async = "0.36.1"
sqlparser = "0.59.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9.8"
anyhow = "1.0.98"
tabled = "0.20.0"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
strsim = "0.11.1"
toml_edit = "0.23.7"
regex = "1.12.2"
chacha20poly1305 = "0.10.1"
base64 = "0.22.1"
rpassword = "7.4.0"
rand = "0.9.2"

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.20.0"

[profile.release]
lto = true
strip = true
opt-level = 3
